--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,5 +1,12 @@
-{"properties": [{
-  "name": "bot.token",
-  "type": "java.lang.String",
-  "description": "A description for 'bot.token'"
-}]}
+{"properties": [
+  {
+    "name": "bot.token",
+    "type": "java.lang.String",
+    "description": "A description for 'bot.token'"
+  },
+  {
+    "name": "openai.token",
+    "type": "java.lang.String",
+    "description": "A description for 'openai.token'"
+  }
+]}
