the userInfo entity has been added and a handler has been added to change it

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -8,5 +8,10 @@
     "name": "openai.token",
     "type": "java.lang.String",
     "description": "A description for 'openai.token'"
+  },
+  {
+    "name": "telegram.group-id",
+    "type": "java.lang.String",
+    "description": "A description for 'telegram.group-id'"
   }
 ]}
