--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,23 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# Игнорируем файлы конфигурации с секретными данными
+.env
+*.yml
+*.yaml
+!important-config.yaml  # исключение (этот файл НЕ будет игнорироваться)
+
+# Игнорируем файлы зависимостей и сборки
+/node_modules
+/target
+/out
+
+# Игнорируем IDE-файлы
+.idea/
+.vscode/
+*.iml
+
+# Игнорируем логи и временные файлы
+*.log
+*.tmp
